# boat_ai_assistant

./: README.md  claude_formatter.py  main.py  outlook_reader.py  outlook_reader.py.py  pyproject.toml  report_formatter.py  requirements.txt  run_agent.py  weekly_exec_report.txt  weekly_exec_report_claude.txt  weekly_ops_report.txt  weekly_ops_report_claude.txt
api/: upload.py
models/: prompt.py  subcontractor.py
services/: report_engine.py
src/: ai_engine.py  claude_formatter.py  data_loader.py  main.py  report_generator.py  requirements.txt  run_agent.py
src/api/: ai.py  auth.py  graph_endpoints.py  outlook_auth.py  reports.py  subcontractors.py  upload.py  weekly_ai_reports.py  weekly_reports.py
src/data/: mock_stats.json  mock_subs.json  mock_transcripts.json  test_email_data.json
src/data/reports/: weekly_report.txt
src/data/uploaded_files/: job1_notes.txt  meeting_summary.txt
src/models/: user_profile.py
src/services/: anthropic_client.py  graph_client.py  ms_graph_client.py  ms_oauth.py  openai_client.py  report_engine.py  report_generator.py  subcontractor_finder.py  user_profile_store.py  weekly_ai_engine.py  weekly_summary_engine.py
src/utils/: file_storage.py
utils/: jwt_handler.py
