[project]
name = "boat-ai-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Mitch Middleton",email = "yourgithubemail@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "boat_ai_assistant", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
